# rust-imap

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
examples/: basic.rs  gmail_oauth2.rs
src/: client.rs  error.rs  lib.rs  mock_stream.rs  parse.rs
src/types/: fetch.rs  mod.rs  name.rs
