[package]

name = "imap"
version = "0.0.5"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-imap"
description = "IMAP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
openssl = "*"
regex = "*"

[[bin]]
name = "example"
path = "example.rs"
